modificando el bot y rediseño

--- a/estilos.css
+++ b/estilos.css
@@ -9,6 +9,86 @@
   --espacios-contenido:45px;
 }
 
+/* carousel */
+.slide-contenedor{
+  font-size: var(--titulos);
+  color: var(--color1);
+  margin-bottom: var(--espacios);
+  text-align: center;
+  max-width: 100%;
+  max-height: 100vh;
+  width: 100%;
+  position: static;
+  overflow: hidden;
+  margin: auto;
+  padding: var(--margenes) 0;
+}
+
+/*.mSlider{
+  display: none;
+  transition: 2s;
+  max-height: 50vh;
+}*/
+
+.miSlider  img{
+  width: 90%;
+  max-height: 70vh;
+  height: inherit;
+  object-fit: cover;
+  vertical-align: top;
+  transition: 2s;
+}
+.direcciones{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 20px;
+}
+.direcciones a{
+  color: #fff;
+  display: inline-block;
+  padding: 20px;
+  text-decoration: none;
+}
+.direcciones a:hover{
+  background: rgba(0, 0, 0, .5);
+  transition: .5s;
+}
+.barras{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 15px;
+}
+.barra{
+  cursor: pointer;
+  height: 2px;
+  width: 25px;
+  margin: 0 2px;
+  background: #dcdde1;
+  display: inline-block;
+  margin-left: 3px;
+}
+.active{
+  background-color: #e74c3c;
+}
+.fade{
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+  @keyframes fade {
+    from {opacity: .4;}
+    to{opacity: 1;}
+  }
+
+  /*REDES SOCIALES*/
 .social-bar{
     position: fixed;
     right: 0;
@@ -97,6 +177,7 @@ img{
   left: 6px;
   width: 13px;
   background: #cef;
+  transition: all .1s ease-in-out;
   animation: lds-facebook 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
 }
 
@@ -132,16 +213,94 @@ img{
 
 header{
   width: 100%;
-  height:600px;
-  background: linear-gradient(to bottom,
+  height:800px;
+  animation: nav1 28s infinite linear;
+}
+
+@keyframes nav1{
+  0%{
+
+    background: linear-gradient(to bottom,
   rgba(211,135,20, .6),
   rgba(250, 99, 225, 0.6),
   rgba(7,109,150, .45)
   ), url(img/fondo2.jpg);
   background-attachment: fixed;
   background-position: center;
-  background-size: cover;
+  background-size: cover; 
+  }
+  25%{
+    background: linear-gradient(to bottom,
+  rgba(211,135,20, .6),
+  rgba(250, 99, 225, 0.6),
+  rgba(7,109,150, .45)
+  ), url(img/fondo2.jpg);
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover; 
+  }
+  26%{
+    background: linear-gradient(to bottom,
+  rgba(211,135,20, .6),
+  rgba(79, 230, 250, 0.6),
+  rgba(7,109,150, .45)
+  ), url(img/fondo3.jpg);
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover; 
+  }
+  50%{
+    background: linear-gradient(to bottom,
+    rgba(211,135,20, .6),
+  rgba(79, 230, 250, 0.6),
+  rgba(7,109,150, .45)
+  ), url(img/fondo3.jpg);
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover; 
+  }
+  51%{
+    background: linear-gradient(to bottom,
+  rgba(211,135,20, .6),
+  rgba(79, 230, 250, 0.6),
+  rgba(7,109,150, .45)
+  ), url(img/fondo4.jpg);
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover; 
+  }
+  75%{
+    background: linear-gradient(to bottom,
+    rgba(211,135,20, .6),
+    rgba(79, 230, 250, 0.6),
+  rgba(7,109,150, .45)
+  ), url(img/fondo4.jpg);
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover; 
+  }
+  76%{
+    background: linear-gradient(to bottom,
+  rgba(211,135,20, .6),
+  rgba(250, 99, 225, 0.6),
+  rgba(7,109,150, .45)
+  ), url(img/fondo5.jpg);
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover; 
+  }
+  100%{
+    background: linear-gradient(to bottom,
+  rgba(211,135,20, .6),
+  rgba(250, 99, 225, 0.6),
+  rgba(7,109,150, .45)
+  ), url(img/fondo5.jpg);
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover; 
+  }
 }
+
 
 nav{
   width: 100%;
@@ -254,19 +413,19 @@ nav .enlaces a:hover{
 }
 
 .content-card{
-  width: 31%;
+  width: 20%;
   box-shadow: 0 0 6px 0 rgba(0,0,0,.5);
   overflow: hidden;
-  height:400px;
+  height:300px;
 }
 
 .people{
-  height: 80%;
+  height: 70%;
 }
 
 .content-card img{
-  width: 100%;
-  height: 100%;
+  width: 90%;
+  height: 90%;
   object-fit: cover;
 }
 
